Read from file text and parse to struct successfully

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "*.md": "markdown",
-        "regex.h": "c"
+        "regex.h": "c",
+        "random": "c"
     }
 }
